--- a/src/main/resources/locale_en_US.properties
+++ b/src/main/resources/locale_en_US.properties
@@ -1,17 +1,26 @@
-shortDesc = Short Description
-fullDesc = Full Description
-error.required.fullDesc = Full Description is empty!
-error.required.shortDesc = Short Description is empty!
-error.required.comments.author = Author is empty!
-error.required.comments.description = Description is empty!
-addNews = Add news
+brief = Brief
+content = Content
+title = Title
+error.required.content = Content is empty!
+error.required.brief = Brief is empty!
+error.required.title = Title is empty!
+error.required.comment.author = Author is empty!
+error.required.comment.description = Description is empty!
+addNews = Create news
+removeNews = Remove News
 selectedNews = Selected News
-comments.Author = Author of comments
-comments.Description = Description of comments
-comments.DateCreated = Date of comments
-comments.add = Add comments
-comments.comments = Comments
-comments.delete = Remove comments
-editNews = Edit 
-mainMenu = Main menu
-submit - Submit
+comment.Author = Author of comment
+comment.Description = Description of comment
+comment.DateCreated = Date of comment
+comment.add = Add comment
+comment.comment = Comment
+comment.delete = Remove comment
+editNews = Edit
+mainPage = Main page
+submit = Submit
+remove = Remove News
+confirm = Are you sure?
+locale.russian = Russian
+locale.english = English
+addDelete = Add/Delete
+open = View details
