--- a/src/main/resources/locale_ru_KZ.properties
+++ b/src/main/resources/locale_ru_KZ.properties
@@ -1,17 +1,26 @@
-addNews = Добавить новость
-shortDesc = Короткое описание
-fullDesc = Полное описание
-error.required.fullDesc = Пустое короткое описание!
-error.required.shortDesc = Пустое полное описание!
-error.required.comments.author = Пустое поле автора!
-error.required.comments.description = пустое поле описания!
-selectedNews = Выбранная новость
-comments.Author = Автор комментария
-comments.Description = Описание комментария
-comments.DateCreated = Дата добавления комментария
-comments.add = Добавить комментарий
-comments.comments = Коментарии
-comments.delete = Удалить коментарий
-editNews = Редактировать новость
-mainMenu = Главное меню
-submit - Подтвердить
+addNews = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u0432\u043E\u0441\u0442\u044C
+removeNews = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u043D\u043E\u0432\u043E\u0441\u0442\u044C
+brief = \u041A\u0440\u0430\u0442\u043A\u043E\u0435 \u043E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+content = \u041F\u043E\u043B\u043D\u043E\u0435 \u043E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+title = \u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
+error.required.brief = \u041F\u0443\u0441\u0442\u043E\u0435 \u043A\u0440\u0430\u0442\u043A\u043E\u0435 \u043E\u043F\u0438\u0441\u0430\u043D\u0438\u0435!
+error.required.content = \u041F\u0443\u0441\u0442\u043E\u0435 \u043F\u043E\u043B\u043D\u043E\u0435 \u043E\u043F\u0438\u0441\u0430\u043D\u0438\u0435!
+error.required.title = \u041F\u0443\u0441\u0442\u043E\u0435 \u043F\u043E\u043B\u0435 \u0437\u0430\u0433\u043E\u043B\u043E\u0432\u043A\u0430!
+error.required.comment.author = \u041F\u0443\u0441\u0442\u043E\u0435 \u043F\u043E\u043B\u0435 \u0430\u0432\u0442\u043E\u0440\u0430!
+error.required.comment.description = \u043F\u0443\u0441\u0442\u043E\u0435 \u043F\u043E\u043B\u0435 \u043E\u043F\u0438\u0441\u0430\u043D\u0438\u044F!
+selectedNews = \u0412\u044B\u0431\u0440\u0430\u043D\u043D\u0430\u044F \u043D\u043E\u0432\u043E\u0441\u0442\u044C
+comment.Author = \u0410\u0432\u0442\u043E\u0440 \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u044F
+comment.Description = \u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435 \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u044F
+comment.DateCreated = \u0414\u0430\u0442\u0430 \u0434\u043E\u0431\u0430\u0432\u043B\u0435\u043D\u0438\u044F \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u044F
+comment.add = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439
+comment.comment = \u041A\u043E\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0438
+comment.delete = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u043A\u043E\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439
+editNews = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043D\u043E\u0432\u043E\u0441\u0442\u044C
+mainPage = \u0413\u043B\u0430\u0432\u043D\u0430\u044F \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430
+submit = \u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C
+remove = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
+confirm = \u0412\u044B \u0443\u0432\u0435\u0440\u0435\u043D\u044B?
+locale.russian = \u0420\u0443\u0441\u0441\u043A\u0438\u0439
+locale.english = \u0410\u043D\u0433\u043B\u0438\u0439\u0441\u043A\u0438\u0439
+add/addDelete = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C/\u0423\u0434\u0430\u043B\u0438\u0442\u044C
+open = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u043D\u043E\u0432\u043E\u0441\u0442\u044C
